--- a/less/home-page.less
+++ b/less/home-page.less
@@ -58,6 +58,14 @@
       }
 
       .btn {
+        .btn-style(1px solid black, @btn-bg-color);
+        border-radius: 8px;
+        color: white;
+        text-align: center;
+        width:30%;
+        height: 10%;
+        padding-top: 2%;
+        font-size:1.4em;
       }
     }
 
@@ -73,3 +81,5 @@
     }
   }
 }// home
+
+/* Mobile Styling */
