--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,8 @@
+/*  LESS Parametric Mixin: create a parametric mixin that is used to create the sign up button styles.
+
+ Use at least 2 parameters to create your button
+
+ Create a hover state that swaps the background color and font color of the base button styles. */
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -160,6 +165,27 @@ p {
   width: 100%;
   margin: 0 auto;
 }
+.navb {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
+  background-color: #F6F6F6;
+}
+.spacewalk {
+  font-size: 4em;
+  color: black;
+  margin: 0.3em 0;
+}
+.navlinks {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  font-size: 1.8em;
+  color: black;
+  width: 31%;
+  margin-bottom: 0.5em;
+}
 footer {
   color: #22283B;
   background: #f4f4f4;
@@ -212,6 +238,17 @@ footer {
 .home .walk .walk-text p {
   margin-bottom: 26px;
 }
+.home .walk .walk-text .btn {
+  border: 1px solid black;
+  background-color: #22283A;
+  border-radius: 8px;
+  color: white;
+  text-align: center;
+  width: 30%;
+  height: 10%;
+  padding-top: 2%;
+  font-size: 1.4em;
+}
 .home .walk .walk-img {
   width: 46%;
   margin-left: 4%;
@@ -221,3 +258,4 @@ footer {
   height: auto;
   border-radius: 10px;
 }
+/* Mobile Styling */
