--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,21 @@
 // Navigation code here
+
+.navb {
+    .flex(space-between, center);
+    flex-direction: column;
+    background-color: @nav-bg;
+
+}
+
+.spacewalk {
+    .fontstyle(4em,black);
+    margin: .3em 0;
+}
+
+.navlinks {
+    .flex(space-evenly, center);
+    .fontstyle(1.8em, black);
+    width:31%;
+    margin-bottom: .5em;
+}
+
