--- a/less/home-page.less
+++ b/less/home-page.less
@@ -67,6 +67,10 @@
         padding-top: 2%;
         font-size:1.4em;
       }
+      .btn:hover {
+        background-color: lime;
+        color: red;
+      }
     }
 
     .walk-img {
@@ -83,3 +87,13 @@
 }// home
 
 /* Mobile Styling */
+
+@media @phone {
+  .walk{
+    display: flex;
+  }
+.walk-text{
+  
+width:100%;
+}
+}
