--- a/less/home-page.less
+++ b/less/home-page.less
@@ -89,11 +89,19 @@
 /* Mobile Styling */
 
 @media @phone {
-  .walk{
+  #walk {
     display: flex;
+    flex-direction: column-reverse;
+    margin-top:20px;
+    padding:10px 10px;
+    width:100%;
   }
-.walk-text{
-  
-width:100%;
+  #walk-text {
+    width:90%;
+  }
+  #walk-img {
+    width:100%;
+    margin:none;
+  }
 }
-}
+
