bottom section mobile done

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -89,6 +89,11 @@
 /* Mobile Styling */
 
 @media @phone {
+ 
+ 
+ 
+ 
+ 
   #walk {
     display: flex;
     flex-direction: column-reverse;
@@ -97,11 +102,19 @@
     width:100%;
   }
   #walk-text {
-    width:90%;
+    width:100%;
   }
   #walk-img {
     width:100%;
-    margin:none;
+    margin-left:0%;
+    margin-bottom: 4%;
+    margin-top: 1%;
+  }
+  #btn {
+    width:100%;
+    height:50px;
+    padding-top: 3.5%;
+    border-radius: 0px;
   }
 }
 
