--- a/css/index.css
+++ b/css/index.css
@@ -277,10 +277,18 @@ footer {
     width: 100%;
   }
   #walk-text {
-    width: 90%;
+    width: 100%;
   }
   #walk-img {
     width: 100%;
-    margin: none;
+    margin-left: 0%;
+    margin-bottom: 4%;
+    margin-top: 1%;
+  }
+  #btn {
+    width: 100%;
+    height: 50px;
+    padding-top: 3.5%;
+    border-radius: 0px;
   }
 }
