--- a/css/index.css
+++ b/css/index.css
@@ -183,8 +183,8 @@ p {
   align-items: center;
   font-size: 1.8em;
   color: black;
-  width: 31%;
-  margin-bottom: 0.5em;
+  width: 45%;
+  margin-bottom: 0.6em;
 }
 @media (max-width:500px) {
   .navlinks {
@@ -269,6 +269,15 @@ footer {
 }
 /* Mobile Styling */
 @media (max-width:500px) {
+  #sky {
+    display: none;
+  }
+  #launch {
+    display: none;
+  }
+  #blast {
+    width: 100%;
+  }
   #walk {
     display: flex;
     flex-direction: column-reverse;
