--- a/less/home-page.less
+++ b/less/home-page.less
@@ -89,8 +89,15 @@
 /* Mobile Styling */
 
 @media @phone {
- 
- 
+ #sky{
+   display: none;
+ }
+ #launch{
+   display: none;
+ }
+ #blast{
+   width:100%;
+ }
  
  
  
